Fixed menu-links overlapping when screen size reduced

--- a/style.css
+++ b/style.css
@@ -49,18 +49,21 @@ html,body {
 	text-align: center;
 }
 
+
+
 .menu-links {
-	padding: 25px 0 25px 0;
+	padding: 5px 0 5px 0;
+	margin-bottom: 10px;
 }
 
 .menu-links > a {
-	margin-right: 25px;
 	text-transform: uppercase;
 	font-weight: 600;
 	color: #a0a0a0;
 	border: 2px solid #a0a0a0;
 	border-radius: 7px;
-	padding: 8px;
+	padding: 6px;
+	margin-right: 6px;
 }
 
 .menu-links > a:hover {
